
[metadata]
name = nistitl
version = attr: nistitl.__version__
author = Olivier Heurtier
author_email = olivier.heurtier@idemia.com
license = CeCILL-C
description = NIST-ITL Python Parsing Library
long_description = file: README.rst, LICENSE
url = https://github.com/idemia/python-nistitl
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: CeCILL-C Free Software License Agreement (CECILL-C)
    Operating System :: OS Independent

[build_sphinx]
source-dir = docs/
build-dir  = build/docs
all_files  = 1

[options]
py_modules = nistitl
test_suite = 
    tests
